intent layer search enging
